--- a/test/fixtures/presets.yml
+++ b/test/fixtures/presets.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  email: MyString
   code: MyString
-  user_id: 1
 
 two:
+  email: MyString
   code: MyString
-  user_id: 1
